# shroudb-sigil

./: .dockerignore  .gitignore  ABOUT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DOCS.md  Dockerfile  ENGINE_DAG.md  ENGINE_INTEGRATION.md  README.md  TODO.md  TODOS.md  protocol.toml  shroudb-sigil.md
.github/workflows/: release.yml
shroudb-sigil-cli/: Cargo.toml
shroudb-sigil-cli/src/: main.rs  migrate.rs  migrate_store.rs
shroudb-sigil-client/: Cargo.toml
shroudb-sigil-client/src/: connection.rs  error.rs  lib.rs
shroudb-sigil-core/: Cargo.toml
shroudb-sigil-core/src/: credential.rs  error.rs  field_kind.rs  lib.rs  record.rs  routing.rs  schema.rs  session.rs
shroudb-sigil-engine/: Cargo.toml
shroudb-sigil-engine/src/: caller.rs  capabilities.rs  cipher_remote.rs  credential.rs  engine.rs  jwt.rs  keep_remote.rs  lib.rs  schema_registry.rs  session.rs  test_support.rs  veil_remote.rs  write_coordinator.rs
shroudb-sigil-http/: Cargo.toml
shroudb-sigil-http/src/: cors.rs  csrf.rs  lib.rs  rate_limit.rs  router.rs
shroudb-sigil-protocol/: Cargo.toml
shroudb-sigil-protocol/src/: commands.rs  dispatch.rs  lib.rs  response.rs
shroudb-sigil-server/: Cargo.toml
shroudb-sigil-server/src/: cipher_embedded.rs  config.rs  cors.rs  csrf.rs  http.rs  keep_embedded.rs  main.rs  rate_limit.rs  tcp.rs  veil_embedded.rs
shroudb-sigil-server/tests/: integration.rs
shroudb-sigil-server/tests/common/: mod.rs
