[package]
name = "shroudb-sigil-cli"
description = "CLI tool for the Sigil credential envelope engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "shroudb-sigil-cli"
path = "src/main.rs"

[dependencies]
shroudb-sigil-client.workspace = true
shroudb-sigil-core.workspace = true
shroudb-store.workspace = true
shroudb-storage.workspace = true

tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
shroudb-storage = { workspace = true, features = ["testing"] }
