[package]
name = "shroudb-sigil-engine"
description = "Store-backed credential envelope engine for Sigil"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
shroudb-sigil-core.workspace = true
shroudb-store.workspace = true
shroudb-acl.workspace = true
shroudb-audit.workspace = true
shroudb-chronicle-core.workspace = true
shroudb-cipher-client.workspace = true
shroudb-crypto.workspace = true
shroudb-keep-client.workspace = true
shroudb-veil-client.workspace = true
shroudb-server-bootstrap.workspace = true

deadpool.workspace = true
argon2.workspace = true
ring.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
postcard.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
base64.workspace = true
hex.workspace = true
zeroize.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
shroudb-storage = { workspace = true, features = ["testing"] }
