[package]
name = "shroudb-sigil-http"
description = "Shared Axum HTTP router for the Sigil credential envelope engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
shroudb-sigil-core.workspace = true
shroudb-sigil-engine.workspace = true
shroudb-sigil-protocol.workspace = true
shroudb-acl.workspace = true
shroudb-store.workspace = true

axum.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
metrics.workspace = true
