[package]
name = "shroudb-sigil-protocol"
description = "RESP3 wire protocol for the Sigil credential envelope engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
shroudb-sigil-core.workspace = true
shroudb-sigil-engine.workspace = true
shroudb-store.workspace = true

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
shroudb-storage.workspace = true
shroudb-crypto.workspace = true
tempfile = "3"
