[package]
name = "shroudb-sigil-server"
description = "HTTP + TCP server for the Sigil credential envelope engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "shroudb-sigil"
path = "src/main.rs"

[dependencies]
shroudb-sigil-core.workspace = true
shroudb-sigil-engine.workspace = true
shroudb-sigil-protocol.workspace = true
shroudb-acl.workspace = true
shroudb-cipher-client.workspace = true
shroudb-store.workspace = true
shroudb-storage.workspace = true
shroudb-veil-client.workspace = true
shroudb-crypto.workspace = true
shroudb-protocol-wire.workspace = true
shroudb-server-tcp.workspace = true
tokio-rustls.workspace = true

axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
anyhow.workspace = true
uuid.workspace = true

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "cookies"] }
shroudb-cipher-client.workspace = true
shroudb-cipher-blind.workspace = true
shroudb-keep-client.workspace = true
shroudb-veil-client.workspace = true
shroudb-veil-blind.workspace = true
tokio = { version = "1", features = ["full"] }
tempfile = "3"
